<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="album">相册</string>
    <string name="app_name">友圈集赞助手</string>
    <string name="at_location">所在位置</string>
    <string name="camera">相机</string>
    <string name="cancel">取消</string>
    <string name="capture_success">截屏成功</string>
    <string name="comment_count">评论人数</string>
    <string name="content_cant_null">至少选择一张图片或发表点想法</string>
    <string name="create_moment">生成朋友圈</string>
    <string name="create_moment_ing">朋友圈生成中...</string>
    <string name="failed_to_get_photo">无法获取图片信息</string>
    <string name="get_from_wechat">从微信获取</string>
    <string name="go_upgrade">立即更新</string>
    <string name="image_create_error">图片选取出错,请稍后重试</string>
    <string name="image_no_exist">图片不存在，请选择其他图片！</string>
    <string name="later_decide">稍后再说</string>
    <string name="like_count">点赞人数</string>
    <string name="like_publish_settings">集赞发布设置</string>
    <string name="max_count_photo_hint">最多只能选%d张照片</string>
    <string name="my_location">我的位置</string>
    <string name="nickname_cant_null">昵称不能为空</string>
    <string name="not_install_wechat">未安装微信</string>
    <string name="not_show_location">不显示我的位置</string>
    <string name="one_hour_ago">1小时前</string>
    <string name="photoSelect_album_not_found">手机未安装相册应用！</string>
    <string name="photoSelect_camera_not_found">手机未安装相机应用！</string>
    <string name="photo_send">(%1$d/%2$d) 发送</string>
    <string name="photo_title">相机胶卷</string>
    <string name="publish_time">发布时间</string>
    <string name="setting_nickname">设置昵称</string>
    <string name="thirty_minutes_ago">30分钟前</string>
    <string name="this_moment_thinking">这一刻的想法...</string>
    <string name="toast_auth_cancel">取消授权</string>
    <string name="toast_auth_fail">授权失败，请稍后重试</string>
    <string name="two_hours_ago">2小时前</string>
    <string name="umeng_socialize_sharetodouban">分享到豆瓣</string>
    <string name="umeng_socialize_sharetolinkin">分享到领英</string>
    <string name="umeng_socialize_sharetorenren">分享到人人网</string>
    <string name="umeng_socialize_sharetosina">分享到新浪微博</string>
    <string name="umeng_socialize_sharetotencent">分享到腾讯微博</string>
    <string name="umeng_socialize_sharetotwitter">分享到twitter</string>
    <string name="welcome_name">集赞助手%1$s</string>
</resources>
